--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "ubermichael/nines",
+    "name": "sfu-dhil/nines",
     "description": "Some useful bundles.",
     "license": "gpl",
     "type": "library",
