--- a/composer.json
+++ b/composer.json
@@ -49,7 +49,8 @@
         "symfony/twig-bundle": "^6.2",
         "symfony/serializer-pack": "^1.2",
         "symfony/monolog-bundle": "^3.8",
-        "symfony/html-sanitizer": "^6.2"
+        "symfony/html-sanitizer": "^6.2",
+        "excelwebzone/recaptcha-bundle": "^1.5"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.4",
