--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,6 @@
             "Nines\\FeedbackBundle\\": "FeedbackBundle",
             "Nines\\MakerBundle\\": "MakerBundle",
             "Nines\\MediaBundle\\": "MediaBundle",
-            "Nines\\SolrBundle\\": "SolrBundle",
             "Nines\\UserBundle\\": "UserBundle",
             "Nines\\UtilBundle\\": "UtilBundle"
         }
@@ -37,10 +36,8 @@
         "guzzlehttp/guzzle": "^7.5",
         "knplabs/knp-menu-bundle": "^3.2",
         "knplabs/knp-paginator-bundle": "^6.1",
-        "minimalcode/search": "^1.0",
         "nyholm/psr7": "^1.5",
         "sensio/framework-extra-bundle": "^6.2",
-        "solarium/solarium": "^6.2",
         "twig/string-extra": "^3.5",
         "symfony/form": "^6.2",
         "symfony/security-bundle": "^6.2",
@@ -66,7 +63,6 @@
         "symfony/maker-bundle": "^1.48",
         "dama/doctrine-test-bundle": "^7.2",
         "friendsofphp/php-cs-fixer": "^3.15",
-        "phpunit/phpunit": "^9.6",
-        "rector/rector": "^0.15.21"
+        "phpunit/phpunit": "^9.6"
     }
 }
