--- a/composer.json
+++ b/composer.json
@@ -33,36 +33,36 @@
         "doctrine/inflector": "^2.0",
         "doctrine/persistence": "^3.1",
         "egulias/email-validator": "^4.0",
-        "guzzlehttp/guzzle": "^7.5",
+        "guzzlehttp/guzzle": "^6.5||^7.5",
         "knplabs/knp-menu-bundle": "^3.2",
-        "knplabs/knp-paginator-bundle": "^6.1",
+        "knplabs/knp-paginator-bundle": "^6.2",
         "nyholm/psr7": "^1.5",
         "sensio/framework-extra-bundle": "^6.2",
         "twig/string-extra": "^3.5",
-        "symfony/form": "^6.2",
-        "symfony/security-bundle": "^6.2",
-        "symfony/validator": "^6.2",
-        "symfony/mailer": "^6.2",
-        "symfony/twig-bundle": "^6.2",
-        "symfony/serializer-pack": "^1.2",
+        "symfony/form": "6.3.*",
+        "symfony/security-bundle": "6.3.*",
+        "symfony/validator": "6.3.*",
+        "symfony/mailer": "6.3.*",
+        "symfony/twig-bundle": "6.3.*",
+        "symfony/serializer-pack": "^1.3",
         "symfony/monolog-bundle": "^3.8",
-        "symfony/html-sanitizer": "^6.2",
+        "symfony/html-sanitizer": "6.3.*",
         "excelwebzone/recaptcha-bundle": "^1.5"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.4",
         "liip/test-fixtures-bundle": "^2.6.0",
-        "symfony/browser-kit": "6.2.*",
-        "symfony/css-selector": "6.2.*",
-        "symfony/phpunit-bridge": "^6.2",
+        "symfony/browser-kit": "6.3.*",
+        "symfony/css-selector": "6.3.*",
+        "symfony/phpunit-bridge": "6.3.*",
         "friendsoftwig/twigcs": "^6.2",
         "phpstan/phpstan": "^1.10",
         "phpstan/phpstan-doctrine": "^1.3",
         "phpstan/phpstan-symfony": "^1.2",
         "symfony/test-pack": "^1.1",
-        "symfony/maker-bundle": "^1.48",
+        "symfony/maker-bundle": "^1.50",
         "dama/doctrine-test-bundle": "^7.2",
-        "friendsofphp/php-cs-fixer": "^3.15",
+        "friendsofphp/php-cs-fixer": "^3.22",
         "phpunit/phpunit": "^9.6"
     }
 }
