--- a/composer.json
+++ b/composer.json
@@ -44,6 +44,7 @@
         "symfony/validator": "6.3.*",
         "symfony/mailer": "6.3.*",
         "symfony/twig-bundle": "6.3.*",
+        "symfony/translation": "6.3.*",
         "symfony/serializer-pack": "^1.3",
         "symfony/monolog-bundle": "^3.8",
         "symfony/html-sanitizer": "6.3.*",
